# webshield

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: README.md  app.py
tests/: test_models.py  test_modules.py  test_new_modules.py  test_v110_modules.py  test_v120_modules.py  test_v160_modules.py  test_v180_modules.py
webshield/: __init__.py  cli.py
webshield/core/: crawler.py  http.py  models.py  scanner.py
webshield/modules/: api_exposure.py  auth_hardening.py  billion_laughs.py  broken_links.py  business_logic.py  bypass_403.py  clickjacking.py  cloud_exposure.py  cmd_injection.py  cookies.py  cors.py  crlf_injection.py  csp.py  csrf_check.py  cve_checks.py  dangerous_js.py  default_credentials.py  dir_listing.py  dns_email.py  dom_xss.py  elmah_trace.py  evasion_scan.py  exposed_panels.py  file_upload.py  form_security.py  graphql.py  hash_disclosure.py  headers.py  http_header_injection.py  http_methods.py  http_parameter_pollution.py  httpoxy.py  idor_check.py  info_leak.py  insecure_deserialization.py  jwt.py  ldap_injection.py  lfi.py  log4shell.py  malware_indicators.py  (+38 more)
webshield/reporter/: html_report.py  json_out.py  sarif.py  terminal.py
